HTTP API: implemented basic endpoints & torrent downloader
